feat: added dockerfile

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,24 +1,42 @@
-worker_processes  1;
+worker_processes 1;
 
 events {
     worker_connections 1024;
 }
 
 http {
-    lua_shared_dict cache 10m;
     include       mime.types;
     default_type  application/octet-stream;
-    sendfile        on;
-    keepalive_timeout  65;
+
+   
 
     server {
-        listen 8080;
+        listen 8081;  # Porta do host (ajustável)
+        server_name localhost;
 
+         # Declarar a variável target para uso dinâmico via Lua
+        set $target "";
+
+
+        location = /health {
+            default_type application/json;
+            return 200 '{"status":"ok","gateway":"running"}';
+        }
+        
+        # Middleware de autenticação
         access_by_lua_file /etc/openresty/lua/auth.lua;
 
         location / {
+            # Lua para definir a rota/microserviço destino
             rewrite_by_lua_file /etc/openresty/lua/routes.lua;
+
+            # Proxy para o microserviço definido em $target
             proxy_pass $target;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_ssl_verify off;
         }
     }
