--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,10 +3,11 @@ services:
     image: openresty/openresty:1.25.3.1-0-alpine
     container_name: nginx-lua-gateway
     ports:
-      - "8080:8080"
+      - "8081:8081"
     volumes:
       - ./nginx.conf:/usr/local/openresty/nginx/conf/nginx.conf:ro
       - ./lua:/etc/openresty/lua:ro
+    command: /bin/sh -c "mkdir -p /var/log/nginx && openresty -g 'daemon off;'"
     restart: always
 
   api:
@@ -14,3 +15,7 @@ services:
     container_name: mock-api
     ports:
       - "5000:80"
+
+networks:
+  gateway-net:
+    driver: bridge
