--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
-   
+   limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
 
     server {
         listen 8081;  # Porta do host (ajustável)
@@ -27,6 +27,7 @@ http {
         access_by_lua_file /etc/openresty/lua/auth.lua;
 
         location / {
+            limit_req zone=one burst=20 nodelay;
             # Lua para definir a rota/microserviço destino
             rewrite_by_lua_file /etc/openresty/lua/routes.lua;
 
