--- a/nginx.conf
+++ b/nginx.conf
@@ -11,13 +11,20 @@ http {
    limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
 
     server {
-        listen 8081;  # Porta do host (ajustável)
-        server_name localhost;
+        listen 443 ssl;
+        server_name localhost 127.0.0.1;
 
-         # Declarar a variável target para uso dinâmico via Lua
+        ssl_certificate     /etc/openresty/certs/192.168.0.10+1.pem;
+        ssl_certificate_key /etc/openresty/certs/192.168.0.10+1-key.pem;
+
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+        ssl_prefer_server_ciphers on;
+        ssl_protocols TLSv1.2 TLSv1.3;
+
+        error_page 497 https://$host$request_uri;
+
         set $target "";
-
-
         location = /health {
             default_type application/json;
             return 200 '{"status":"ok","gateway":"running"}';
@@ -26,6 +33,7 @@ http {
         # Middleware de autenticação
         access_by_lua_file /etc/openresty/lua/auth.lua;
 
+    
         location / {
             limit_req zone=one burst=20 nodelay;
             # Lua para definir a rota/microserviço destino
@@ -40,5 +48,10 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_ssl_verify off;
         }
+    }
+    server {
+        listen 80;
+        server_name 192.168.0.10 localhost;
+        return 301 https://$host$request_uri;
     }
 }
