--- a/nginx.conf
+++ b/nginx.conf
@@ -8,20 +8,30 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
-   limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
+    resolver 127.0.0.11 valid=30s;
 
     server {
-        listen 8081;  # Porta do host (ajustável)
+        listen 80;
+        server_name localhost;
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl;
         server_name localhost;
 
-         # Declarar a variável target para uso dinâmico via Lua
+        ssl_certificate     /etc/openresty/certs/localhost.pem;
+        ssl_certificate_key /etc/openresty/certs/localhost-key.pem;
         set $target "";
-
-
         location = /health {
             default_type application/json;
             return 200 '{"status":"ok","gateway":"running"}';
         }
+
+        # location /docs {
+        #     proxy_pass http://ADMINISTRATION_MS:PORT/docs;
+        # }
         
         # Middleware de autenticação
         access_by_lua_file /etc/openresty/lua/auth.lua;
