Intercept and adjust SameSite cookie attributes
Add Lua block to modify SameSite cookie attributes for cross-site compatibility.

--- a/nginx.conf
+++ b/nginx.conf
@@ -47,6 +47,23 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_ssl_verify off;
+            # Intercepta e ajusta cookies HttpOnly para cross-site
+            header_filter_by_lua_block {
+                local cookies = ngx.header["Set-Cookie"]
+                if cookies then
+                    if type(cookies) == "table" then
+                        for i, cookie in ipairs(cookies) do
+                            cookies[i] = cookie:gsub("SameSite=Lax", "SameSite=None; Secure")
+                            cookies[i] = cookie:gsub("SameSite=Strict", "SameSite=None; Secure")
+                        end
+                        ngx.header["Set-Cookie"] = cookies
+                    else
+                        cookies = cookies:gsub("SameSite=Lax", "SameSite=None; Secure")
+                        cookies = cookies:gsub("SameSite=Strict", "SameSite=None; Secure")
+                        ngx.header["Set-Cookie"] = cookies
+                    end
+                end
+            }
         }
     }
     server {
