Change Nginx to listen on port 8080 without SSL
Removed SSL configuration and changed listening port to 8080.

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,18 +11,8 @@ http {
    limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
 
     server {
-        listen 443 ssl;
+        listen 8080; 
         server_name localhost 127.0.0.1;
-
-        ssl_certificate     /etc/openresty/certs/192.168.0.10+1.pem;
-        ssl_certificate_key /etc/openresty/certs/192.168.0.10+1-key.pem;
-
-        ssl_session_cache shared:SSL:10m;
-        ssl_session_timeout 10m;
-        ssl_prefer_server_ciphers on;
-        ssl_protocols TLSv1.2 TLSv1.3;
-
-        error_page 497 https://$host$request_uri;
 
         set $target "";
         location = /health {
