--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   gateway:
     build:
@@ -18,6 +16,9 @@ services:
       - ADMIN_API_URL=${ADMIN_API_URL}
       - DEVICES_API_URL=${DEVICES_API_URL}
       - METRICS_API_URL=${METRICS_API_URL}
+      - ADMIN_API_DOCS=${ADMIN_API_DOCS}
+      - DEVICES_API_DOCS=${DEVICES_API_DOCS}
+      - METRICS_API_DOCS=${METRICS_API_DOCS}
     command: /bin/sh -c "mkdir -p /var/log/nginx && openresty -g 'daemon off;'"
     restart: always
 
