--- a/nginx.conf
+++ b/nginx.conf
@@ -21,8 +21,10 @@ http {
         listen 443 ssl;
         server_name localhost;
 
-        ssl_certificate     /etc/openresty/certs/localhost.pem;
-        ssl_certificate_key /etc/openresty/certs/localhost-key.pem;
+        ssl_certificate_key /etc/openresty/certs/cloudflare-origin.key;
+        ssl_certificate     /etc/openresty/certs/cloudflare-origin.crt;
+        # ssl_certificate     /etc/openresty/certs/localhost.pem;
+        # ssl_certificate_key /etc/openresty/certs/localhost-key.pem;
         set $target "";
         location = /health {
             default_type application/json;
@@ -37,11 +39,37 @@ http {
         access_by_lua_file /etc/openresty/lua/auth.lua;
 
         location / {
+            # Variável auxiliar
+            set $cors_origin "";
+
+            if ($http_origin ~* ^https://(localhost(:3000)?|tailfox\.cloud)$) {
+                set $cors_origin $http_origin;
+            }
+
+            # Adiciona headers CORS se o origin for permitido
+            if ($cors_origin != "") {
+                add_header 'Access-Control-Allow-Origin' $cors_origin always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, X-Requested-With' always;
+            }
+
+            # Trata requisições preflight (OPTIONS)
+            if ($request_method = OPTIONS) {
+                add_header 'Access-Control-Allow-Origin' $cors_origin always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, X-Requested-With' always;
+                add_header 'Access-Control-Max-Age' 3600 always;
+                add_header 'Content-Length' 0;
+                add_header 'Content-Type' 'text/plain';
+                return 204;
+            }
+
+            # Regras de proxy normais
             limit_req zone=one burst=20 nodelay;
-            # Lua para definir a rota/microserviço destino
             rewrite_by_lua_file /etc/openresty/lua/routes.lua;
 
-            # Proxy para o microserviço definido em $target
             proxy_pass $target;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
@@ -52,3 +80,63 @@ http {
         }
     }
 }
+
+
+# http {
+#     include       mime.types;
+#     default_type  application/octet-stream;
+
+#    limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
+
+#     server {
+#         listen 8080; 
+#         server_name localhost 127.0.0.1;
+
+#         set $target "";
+#         location = /health {
+#             default_type application/json;
+#             return 200 '{"status":"ok","gateway":"running"}';
+#         }
+        
+#         # Middleware de autenticação
+#         access_by_lua_file /etc/openresty/lua/auth.lua;
+
+    
+#         location / {
+#             limit_req zone=one burst=20 nodelay;
+#             # Lua para definir a rota/microserviço destino
+#             rewrite_by_lua_file /etc/openresty/lua/routes.lua;
+
+#             # Proxy para o microserviço definido em $target
+#             proxy_pass $target;
+#             proxy_http_version 1.1;
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#             proxy_ssl_verify off;
+#             # Intercepta e ajusta cookies HttpOnly para cross-site
+#             header_filter_by_lua_block {
+#                 local cookies = ngx.header["Set-Cookie"]
+#                 if cookies then
+#                     if type(cookies) == "table" then
+#                         for i, cookie in ipairs(cookies) do
+#                             cookies[i] = cookie:gsub("SameSite=Lax", "SameSite=None; Secure")
+#                             cookies[i] = cookie:gsub("SameSite=Strict", "SameSite=None; Secure")
+#                         end
+#                         ngx.header["Set-Cookie"] = cookies
+#                     else
+#                         cookies = cookies:gsub("SameSite=Lax", "SameSite=None; Secure")
+#                         cookies = cookies:gsub("SameSite=Strict", "SameSite=None; Secure")
+#                         ngx.header["Set-Cookie"] = cookies
+#                     end
+#                 end
+#             }
+#         }
+#     }
+#     server {
+#         listen 80;
+#         server_name 192.168.0.10 localhost;
+#         return 301 https://$host$request_uri;
+#     }
+# }
