--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ events {
 http {
     include       mime.types;
     default_type  application/octet-stream;
-
+    
     limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
     resolver 127.0.0.11 valid=30s;
 
@@ -19,8 +19,8 @@ http {
 
     server {
         listen 443 ssl;
-        server_name localhost;
-
+        server_name api.tailfox.cloud dev.tailfox.cloud;
+        client_max_body_size 100M;
         ssl_certificate_key /etc/openresty/certs/cloudflare-origin.key;
         ssl_certificate     /etc/openresty/certs/cloudflare-origin.crt;
         # ssl_certificate     /etc/openresty/certs/localhost.pem;
@@ -42,7 +42,13 @@ http {
             # Variável auxiliar
             set $cors_origin "";
 
-            if ($http_origin ~* ^https://(localhost(:3000)?|tailfox\.cloud)$) {
+            if ($http_origin ~* ^https?://localhost(:3000)?$) {
+                set $cors_origin $http_origin;
+            }
+            if ($http_origin ~* ^https://tailfox\.cloud$) {
+                set $cors_origin $http_origin;
+            }
+            if ($http_origin ~* ^https://(tailfox\.vercel\.app|dev\.tailfox\.cloud)$) {
                 set $cors_origin $http_origin;
             }
 
