--- a/nginx.conf
+++ b/nginx.conf
@@ -23,18 +23,28 @@ http {
         client_max_body_size 100M;
         ssl_certificate_key /etc/openresty/certs/cloudflare-origin.key;
         ssl_certificate     /etc/openresty/certs/cloudflare-origin.crt;
-        # ssl_certificate     /etc/openresty/certs/localhost.pem;
-        # ssl_certificate_key /etc/openresty/certs/localhost-key.pem;
         set $target "";
         location = /health {
             default_type application/json;
             return 200 '{"status":"ok","gateway":"running"}';
         }
 
-        # location /docs {
-        #     proxy_pass http://ADMINISTRATION_MS:PORT/docs;
-        # }
-        
+        location /socket.io/ {
+            proxy_pass http://host.docker.internal:3005/socket.io/;
+            proxy_http_version 1.1;
+
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 3600s;
+            proxy_buffering off;
+        }
         # Middleware de autenticação
         access_by_lua_file /etc/openresty/lua/auth.lua;
 
@@ -86,63 +96,3 @@ http {
         }
     }
 }
-
-
-# http {
-#     include       mime.types;
-#     default_type  application/octet-stream;
-
-#    limit_req_zone $binary_remote_addr zone=one:10m rate=10r/s;
-
-#     server {
-#         listen 8080; 
-#         server_name localhost 127.0.0.1;
-
-#         set $target "";
-#         location = /health {
-#             default_type application/json;
-#             return 200 '{"status":"ok","gateway":"running"}';
-#         }
-        
-#         # Middleware de autenticação
-#         access_by_lua_file /etc/openresty/lua/auth.lua;
-
-    
-#         location / {
-#             limit_req zone=one burst=20 nodelay;
-#             # Lua para definir a rota/microserviço destino
-#             rewrite_by_lua_file /etc/openresty/lua/routes.lua;
-
-#             # Proxy para o microserviço definido em $target
-#             proxy_pass $target;
-#             proxy_http_version 1.1;
-#             proxy_set_header Host $host;
-#             proxy_set_header X-Real-IP $remote_addr;
-#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#             proxy_set_header X-Forwarded-Proto $scheme;
-#             proxy_ssl_verify off;
-#             # Intercepta e ajusta cookies HttpOnly para cross-site
-#             header_filter_by_lua_block {
-#                 local cookies = ngx.header["Set-Cookie"]
-#                 if cookies then
-#                     if type(cookies) == "table" then
-#                         for i, cookie in ipairs(cookies) do
-#                             cookies[i] = cookie:gsub("SameSite=Lax", "SameSite=None; Secure")
-#                             cookies[i] = cookie:gsub("SameSite=Strict", "SameSite=None; Secure")
-#                         end
-#                         ngx.header["Set-Cookie"] = cookies
-#                     else
-#                         cookies = cookies:gsub("SameSite=Lax", "SameSite=None; Secure")
-#                         cookies = cookies:gsub("SameSite=Strict", "SameSite=None; Secure")
-#                         ngx.header["Set-Cookie"] = cookies
-#                     end
-#                 end
-#             }
-#         }
-#     }
-#     server {
-#         listen 80;
-#         server_name 192.168.0.10 localhost;
-#         return 301 https://$host$request_uri;
-#     }
-# }
